--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.64.2",
     "@types/jsdom": "^21.1.7",
     "@types/rss": "^0.0.32",
+    "@vercel/analytics": "^1.5.0",
     "@wisp-cms/client": "^0.0.22",
     "@wisp-cms/react-custom-component": "^0.0.1",
     "axios": "^1.7.9",
