--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@tanstack/react-query": "^5.64.2",
     "@types/jsdom": "^21.1.7",
+    "@types/mdast": "^4.0.4",
     "@types/rss": "^0.0.32",
     "@vercel/analytics": "^1.5.0",
     "@wisp-cms/client": "^0.0.22",
@@ -26,12 +27,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.451.0",
     "next": "15.0.0",
     "node-html-parser": "^6.1.13",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-hook-form": "^7.54.2",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "rss": "^1.2.2",
     "schema-dts": "^1.1.2",
     "slugify": "^1.6.6",
