--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
+      "@content/*": [
+        "./content/*"
+      ],
       "@/*": [
         "./src/*"
       ]
