--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,6 @@
 {
   "extends": [
-    "next/core-web-vitals"
-  ],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": [
-      "warn",
-      {
-        "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_",
-        "caughtErrorsIgnorePattern": "^_"
-      }
-    ],
-    "@typescript-eslint/no-explicit-any": "warn"
-  },
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  }
+    "next/core-web-vitals",
+    "next/typescript"
+  ]
 }
