--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run create-glossary && next build",
     "start": "next start",
     "lint": "next lint",
-    "create-glossary": "ts-node lib/createGlossaryPlaceholders.ts"
+    "create-glossary": "ts-node ./lib/createGlossaryPlaceholders.ts"
   },
   "dependencies": {
     "@formspree/react": "^3.0.0",
@@ -62,7 +62,8 @@
     "eslint-config-next": "15.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "overrides": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
