--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/mdast": "^4.0.4",
     "@types/rss": "^0.0.32",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@wisp-cms/client": "^0.0.22",
     "@wisp-cms/react-custom-component": "^0.0.1",
     "axios": "^1.7.9",
