--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-hook-form": "^7.54.2",
     "remark": "^15.0.1",
+    "remark-directive": "^4.0.0",
     "remark-html": "^16.0.1",
     "rss": "^1.2.2",
     "schema-dts": "^1.1.2",
