--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.54.2",
     "remark": "^15.0.1",
     "remark-directive": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
     "rss": "^1.2.2",
     "schema-dts": "^1.1.2",
